# EffectRE

./: .gitmodules  README  buildEffect.sh  buildEffects.sh  parseEffect.sh  parseEffects.sh
FNA/: Effect.cs  EffectAnnotation.cs  EffectAnnotationCollection.cs  EffectMaterial.cs  EffectParameter.cs  EffectParameterCollection.cs  EffectPass.cs  EffectPassCollection.cs  EffectTechnique.cs  EffectTechniqueCollection.cs  IEffectFog.cs  IEffectLights.cs  IEffectMatrices.cs  Resources.cs  TODO
FNA/StockEffects/: AlphaTestEffect.cs  BasicEffect.cs  DualTextureEffect.cs  EnvironmentMapEffect.cs  README  SkinnedEffect.cs  SpriteEffect.cs
FNA/StockEffects/FXB/: TODO
api_design/: EffectNotes.txt  mojoshader_effect_new.h
licenses/: meptool.LICENSE  unxnb.LICENSE
meptool/: CMakeLists.txt  meptool.c  testparsemini.h
meptool/mojoshader/: mojoshader_effects.c
spritetest/: CMakeLists.txt  spritetest.c
unxnb/: LzxDecoder.cs  Makefile  README  UnXNB.cs
